hphp/hack/test/typecheck/function_pointer/reified_targs_missing3.php
<?hh

function foo<reify T, reify T2>(T $a): void {
}

function test(): void {
  $x = foo<int, _>;
}
